# rainbow-table

./: CMakeLists.txt  README.md  config.h  configsamples.c  configsamples.h  generator.c  generator.h  main.c  random.c  random.h  solver.c  solver.h  trie.c  trie.h
report/: bib.bib  report.bbl  report.tex
report/img/: originalHash.pptx  rainbowTable.pptx
